--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-Hello
+How to water a plant with an arduino
+
+Items
+- An arduino <a href="https://amzn.to/2OjbsqJ">link</a>
+- A water pump <a href="https://amzn.to/2pLZyfE">link</a>
+
+
